[config] add static cache configuration for nginx docker instance

--- a/docker/nginx.conf
+++ b/docker/nginx.conf
@@ -1,17 +1,35 @@
 server {
   listen 80;
+
+  # save logs here
+  access_log /var/log/nginx/access.log;
+
+  # where the root here
+  root /usr/share/nginx/html;
+
   location /api {
     proxy_pass http://backend:8080/api;
   }
+  
   location /login {
     proxy_set_header Host $http_host;
     #proxy_set_header X-Forwarded-Port $server_port;
     proxy_set_header X-Forwarded-Port 3000;
     proxy_pass http://backend:8080/login;
   }
+
+  # First attempt to serve request as file, then
+  # as directory, then fall back to redirecting to index.html
   location / {
-    root /usr/share/nginx/html;
     index index.html index.htm;
     try_files $uri $uri/ /index.html =404;
   }
+
+  # Static files: js, css, images, icons, video, audio, HTC
+  location ~* \.(?:js|css|jpg|jpeg|gif|png|ico|cur|gz|svg|svgz|mp4|ogg|ogv|webm|htc|otf)$ {
+    expires 1y;
+    access_log off;
+    add_header Cache-Control "public";
+  }
+
 }
